<resources>
    <string name="app_name">THE GOAL PLAN</string>
    <string name="the_training_plan">The Training Plan</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="please_fill_in_all_fields">Please fill in all fields and the password needs to be 6 or more characters</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started_with_our_programs">Get started with our programs</string>
    <string name="strength_and_size_program">Strength and Size Program</string>
    <string name="pure_size_program">Pure Size Program</string>
    <string name="save">Save</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile</string>
    <string name="strength_and_size_description">Looking to gain strength like a Powerlifter but still build muscle and aesthetics like a bodybuilder? Welcome to powerbuilding.
        Powerbuilding is a combination of powerlifting and bodybuilding training principles in order to get brutally strong whilst still building as much muscle as possible.</string>
    <string name="get_started">Get Started</string>
    <string name="fat_loss_program">Fat Loss Program</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="euro">€</string> <!--green-->
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="add_goal">Add goal</string>
    <string name="view_goals">View goals</string>
    <string name="goals">GOALS</string>
    <string name="timeUntilGoalDeadline">%1d days and %2d hours</string>
    <string name="date_of_goal_set">DATE OF GOAL SET:</string>
    <string name="update_goals">Update Goals</string>
    <string name="your_goals">YOUR GOALS</string>
    <string name="add_update_a_goal">Add/Update a goal</string>
    <string name="read_your_goals">Read your goals</string>
    <string name="today_s_tasks">TODAY\'S TASKS</string>
    <string name="you_have_set_5_tasks">You have set 5 tasks</string>
    <string name="add_a_task">Add a task</string>
    <string name="view_stats">View stats</string>
    <string name="_23_03_2020">23/03/2020</string>
    <string name="diary">DIARY</string>
    <string name="view_diary">View diary</string>
    <string name="your_24_hours">Your 24 hours</string>
    <string name="stats">STATS</string>
    <string name="open_goals">OPEN GOALS</string>
    <string name="completed_goals">COMPLETED GOALS</string>
    <string name="deleted_goals">DELETED GOALS</string>
    <string name="enter_your_goal">ENTER YOUR GOAL:</string>
    <string name="submit_goal">Submit goal</string>
    <string name="count_down_to_goal">COUNT DOWN TO GOAL</string>
    <string name="drop_down_choices">Drop down choices</string>
    <string name="set_date_deadline">SET DATE DEADLINE:</string>
    <string name="what_type_of_goal">WHAT TYPE OF GOAL:</string>
    <string name="share_completed_goal">Share Completed Goal</string>
    <string name="delete_goal">Delete Goal</string>
    <string name="re_open_goal">Re-Open Goal</string>
    <string name="share_open_goal">Share Open Goal</string>
    <string name="update">Update</string>
    <string name="completed">Completed</string>
    <string name="deleted_on">Deleted on:</string>
    <string name="completion">Completion:</string>
    <string name="deadline">Deadline</string>
    <string name="set">Set:</string>
    <string name="type">Type:</string>
    <string name="goal">Goal:</string>
    <string name="add_task">Add Task</string>
    <string name="task_name">Task name</string>
    <string name="task_description">Task description</string>
    <string name="set_start_date">Set start date</string>
    <string name="set_end_date">Set end date</string>
    <string name="repeating_task">Repeating Task?</string>
    <string name="never">Never</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="annually">Annually</string>
    <string name="every">Every</string>
    <string name="days">Days</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="mon">Mon</string>
    <string name="tues">Tues</string>
    <string name="wed">Wed</string>
    <string name="thurs">Thurs</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="submit_task">Submit task</string>
    <string name="set_task_to_a_goal">Set task to a goal</string>
    <string name="statistics">Statistics</string>

    <plurals name="numberOfGoals">
        <item quantity="one">YOU HAVE %d OPEN GOAL</item>
        <item quantity="other">YOU HAVE %d OPEN GOALS</item>
    </plurals>
</resources>
