<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <import type="com.thetrainingplan.U"/>
        <variable name="viewModel" type="com.thetrainingplan.viewmodels.GoalsViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ActivityReadGoals">

        <fragment
                android:id="@+id/read_goals_toolbar_fragment"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/read_goals_view"
                app:layout_constraintVertical_weight="0.1"
                android:name="com.thetrainingplan.ToolbarProfileFragment"
                />

        <View
                android:id="@+id/read_goals_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/read_goals_toolbar_fragment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_weight="0.9"
                android:background="@color/light_grey"
                />

        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/read_goals_app_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/read_goals_view"
                android:theme="@style/AppTheme.AppBarOverlay">

            <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blue" >

                <com.google.android.material.tabs.TabItem
                        android:id="@+id/tabItem"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/open_goals"/>

                <com.google.android.material.tabs.TabItem
                        android:id="@+id/tabItem2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/completed_goals"/>

                <com.google.android.material.tabs.TabItem
                        android:id="@+id/tabItem3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deleted_goals"/>

            </com.google.android.material.tabs.TabLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/read_goals_app_bar_layout"
                app:layout_constraintStart_toStartOf="@id/read_goals_view"
                app:layout_constraintEnd_toEndOf="@id/read_goals_view"
                app:layout_constraintBottom_toTopOf="@+id/fragment_read_goals_recycler_view"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintVertical_weight="0.1"
                android:background="@color/white"
                />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_read_goals_recycler_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/view_pager"
                app:layout_constraintStart_toStartOf="@id/read_goals_view"
                app:layout_constraintEnd_toEndOf="@id/read_goals_view"
                app:layout_constraintBottom_toBottomOf="@id/read_goals_view"
                tools:listitem="@layout/goals_item"
                app:layout_constraintVertical_weight="0.9"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>