<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable name="viewModel" type="com.thetrainingplan.viewmodels.AuthViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ActivityLogIn"
            android:background="@color/blue"
            >

        <ImageView
                android:id="@+id/log_in_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="50dp"
                android:src="@mipmap/ic_launcher"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintDimensionRatio="1:1"
                android:scaleType="fitCenter"
                android:background="#04090f"
                android:contentDescription="@string/app_name"
                android:backgroundTint="@color/blue"
        />

        <TextView
                android:id="@+id/log_in_heading_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/log_in_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"
                android:text="@string/the_training_plan"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:textStyle="italic"
        />

        <TextView
                android:id="@+id/log_in_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/log_in_heading_app_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:text="@string/log_in"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:textStyle="bold"
        />

        <TextView
                android:id="@+id/log_in_email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/log_in_heading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/log_in_email_input"
                android:layout_marginTop="24dp"
                android:textSize="30sp"
                android:textColor="@color/blue"
                android:text="@string/email"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_bias="0"
                android:visibility="gone"
        />

        <EditText
                android:id="@+id/log_in_email_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="6dp"
                app:layout_constraintTop_toBottomOf="@+id/log_in_email_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/log_in_password_text"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:autofillHints=""
                tools:targetApi="o"
                android:text="@={viewModel.signInEmail}"
                android:backgroundTint="@android:color/white"
        />

        <TextView
                android:id="@+id/log_in_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/log_in_email_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/log_in_password_input"
                android:layout_marginTop="24dp"
                android:textSize="30sp"
                android:textColor="@color/blue"
                android:text="@string/password"
                android:visibility="gone"
        />

        <EditText
                android:id="@+id/log_in_password_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/log_in_password_text"
                app:layout_constraintStart_toStartOf="@+id/log_in_email_input"
                app:layout_constraintEnd_toEndOf="@+id/log_in_email_input"
                app:layout_constraintBottom_toTopOf="@+id/log_in_button"
                android:layout_marginTop="20dp"
                android:padding="6dp"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:autofillHints=""
                tools:targetApi="o"
                android:text="@={viewModel.signInPassword}"
        />

        <ProgressBar
                android:id="@+id/log_in_button_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/log_in_button"
                app:layout_constraintBottom_toBottomOf="@+id/log_in_button"
                app:layout_constraintStart_toStartOf="@+id/log_in_button"
                app:layout_constraintEnd_toEndOf="@+id/log_in_button"
                android:indeterminateTint="@color/white"
                android:visibility="@{viewModel.isSigningIn == false ? View.INVISIBLE : View.VISIBLE}"
        />

        <Button
                android:id="@+id/log_in_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/log_in_create_account_btn"
                app:layout_constraintEnd_toEndOf="@+id/log_in_password_input"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/log_in_password_input"
                app:layout_constraintTop_toBottomOf="@+id/log_in_password_input"
                android:background="@drawable/white_border"
                android:backgroundTint="@color/white"
                android:layout_marginTop="40dp"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:onClick="@{() -> viewModel.signIn()}"
                android:visibility="@{viewModel.isSigningIn == true ? View.INVISIBLE : View.VISIBLE}"
        />

        <Button
                android:id="@+id/log_in_create_account_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/log_in_button"
                app:layout_constraintStart_toStartOf="@+id/log_in_password_input"
                app:layout_constraintEnd_toEndOf="@+id/log_in_password_input"
                android:background="@drawable/white_border"
                android:backgroundTint="@color/white"
                android:layout_marginTop="10dp"
                android:text="@string/create_account"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:onClick="@{() -> viewModel.startActivityCreateAccount()}"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>